--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -202,7 +202,7 @@ border-top-right-radius: 5px;
  background:url(%%derpy-hat%%);
  width:60px;
  height:60px;
- margin-top:-36px;
+ margin-top:-35px;
  margin-left:5px;
  margin-bottom:0px;
  margin-right:-40px;
@@ -1341,6 +1341,9 @@ body:not(.moderator) div.content .flairselectbtn
 
 .linkflair-metathread div p.title span.linkflairlabel{display:none;}
 .linkflair-metathread p.title a.title {color:#FF4500 !important;} 
+
+.linkflair-announcement div p.title span.linkflairlabel{display:none;}
+.linkflair-announcement p.title a.title {color:#A8273D !important;}
 
 /*End Linker's shenanigans*/
 
