--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -451,7 +451,7 @@ a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100c 'motes */
-a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"]
+a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"], a[href|="/rdhello"]
 {background-image:url(%%100x100c%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -467,7 +467,7 @@ a[href|="/imnotsayingitwaschaos"], a[href|="/uwotdahling"], a[href|="/proletaria
 {background-image:url(%%150x150c%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150d 'motes */
-a[href|="/poliwag"], a[href|="/venonat"], a[href|="/pikachu"], a[href|="/ghastly"], a[href|="/ninetales"], a[href|="/venasaur"], a[href|="/applebloom"], a[href|="/sweetiebloom"], a[href|="/celestiaiswatching"], a[href|="/comehugmebro"], a[href|="/hugmebro"], a[href|="/flufflepirate"], a[href|="/shittypone"], a[href|="/twipie"], a[href|="/zecoradust"], a[href|="/cadgiggle"], a[href|="/incognitotwi"], a[href|="/sovietsparkle"], a[href|="/batcadance"], a[href|="/batvinyl"], a[href|="/christmaslyra"]
+a[href|="/poliwag"], a[href|="/venonat"], a[href|="/pikachu"], a[href|="/ghastly"], a[href|="/ninetales"], a[href|="/venasaur"], a[href|="/applebloom"], a[href|="/sweetiebloom"], a[href|="/celestiaiswatching"], a[href|="/comehugmebro"], a[href|="/hugmebro"], a[href|="/flufflepirate"], a[href|="/shittypone"], a[href|="/twipie"], a[href|="/zecoradust"], a[href|="/cadgiggle"], a[href|="/incognitotwi"], a[href|="/sovietsparkle"], a[href|="/batcadance"], a[href|="/batvinyl"], a[href|="/christmaslyra"], a[href|="/adultbelle"]
 {background-image:url(%%150x150d%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -528,8 +528,12 @@ a[href|="/zecoraspooky"], a[href|="/zecorabored"], a[href|="/zecoramagicdust"], 
 {background-image:url(%%misfitsj%%);display:block;float:left;}
 
 /* Misfits k */
-a[href|="/cadscience"], a[href|="/appul"], a[href|="/sadprincesshorse"], a[href|="/humaud"], a[href|="/cutemena"], a[href|="/hipstercad"], a[href|="/pinkiebreak"], a[href|="/fluttertree"], a[href|="/abbowling"], a[href|="/sword"], a[href|="/lutece"], a[href|="/GLaDOS"], a[href|="/glados"], a[href|="/doublesweets"], a[href|="/colgatecute"], a[href|="/crystalzecora"], a[href|="/scootascoots"], a[href|="/sheetiebelle"], a[href|="/sillylyra"], a[href|="/seatiebelt"], a[href|="/topgummi"], a[href|="/dewpony"], a[href|="/chrysalick"], a[href|="/queenpoker"]
+a[href|="/cadscience"], a[href|="/appul"], a[href|="/sadprincesshorse"], a[href|="/humaud"], a[href|="/cutemena"], a[href|="/hipstercad"], a[href|="/pinkiebreak"], a[href|="/fluttertree"], a[href|="/abbowling"], a[href|="/sword"], a[href|="/lutece"], a[href|="/GLaDOS"], a[href|="/glados"], a[href|="/doublesweets"], a[href|="/colgatecute"], a[href|="/crystalzecora"], a[href|="/scootascoots"], a[href|="/sheetiebelle"], a[href|="/sillylyra"], a[href|="/seatiebelt"], a[href|="/topgummi"], a[href|="/dewpony"], a[href|="/chrysalick"], a[href|="/queenpoker"], a[href|="/cutiebelle"]
 {background-image:url(%%misfitsk%%);display:block;float:left;}
+
+/* Misfits l */
+a[href|="/eqggaladash"]
+{background-image:url(%%misfitsl%%);display:block;float:left;}
 
 /*
   ------
@@ -560,7 +564,7 @@ a[href|="/celestiaglee"], a[href|="/winona"], a[href|="/aloe"], a[href|="/prince
 {background-position: -200% -100%;}
 
 /* Grid pos 0,2 'motes */
-a[href|="/frittergasp"], a[href|="/ohyeah"], a[href|="/lunahmm"], a[href|="/pinkpyro"], a[href|="/fshide"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/cybermedic"], a[href|="/sweetiebloom"], a[href|="/karmahappy2"]
+a[href|="/frittergasp"], a[href|="/ohyeah"], a[href|="/lunahmm"], a[href|="/pinkpyro"], a[href|="/fshide"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/cybermedic"], a[href|="/sweetiebloom"], a[href|="/karmahappy2"], a[href|="/rdhello"]
 {background-position: 0 -200%;}
 
 /* Grid pos 1,2 'motes */
@@ -616,7 +620,7 @@ a[href|="/dashdoubt"], a[href|="/humannerddash"], a[href|="/scootcontent"], a[hr
 {background-position: -100% -600%;}
 
 /* Grid pos 2,6 'motes */
-a[href|="/deviousmac"], a[href|="/nerdsunset"], a[href|="/rdfacehoof"], a[href|="/rdtwifacehoof"], a[href|="/tirekunamused"], a[href|="/zubat"]
+a[href|="/deviousmac"], a[href|="/nerdsunset"], a[href|="/rdfacehoof"], a[href|="/rdtwifacehoof"], a[href|="/tirekunamused"], a[href|="/zubat"], a[href|="/adultbelle"]
 {background-position: -200% -600%;}
 
 /* Grid pos 0,7 'motes */
@@ -1207,3 +1211,5 @@ a[href|="/topgummi"] {width:69px;height:120px;background-position: -614px -146px
 a[href|="/dewpony"] {width:137px;height:175px;background-position: -563px -567px;}
 a[href|="/chrysalick"] {width:97px;height:150px;background-position: -466px -599px;}
 a[href|="/queenpoker"] {width:119px;height:150px;background-position: -215px -591px;}
+a[href|="/cutiebelle"] {width:125px;height:120px;background-position: -334px -616px;}
+a[href|="/eqggaladash"] {width:128px;height:250px;}
