--- a/source-css/mlpoc.css
+++ b/source-css/mlpoc.css
@@ -707,7 +707,7 @@ background-color:lightblue;}
 { color:blue; 
 border: 2px solid blue; border-radius: 20px; 
 padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
-background-color:grey;}
+background-color:#9FB6CD;}
 
 .flair-dochelix
 { color:yellow; 
