--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -23,18 +23,22 @@ div.titlebox .users-online span.number:after {
 }
 
 /*Header sticking on the 'ground'*/
-/*
+
 #header-img-a {
-    height:5px;
+    height:0px;
     position:relative;
     bottom:0px;
     left:0;
-    top:0;
+    top:27px;
     margin-right:-10px;
     padding:0
 }
 
 #header-img {
+    margin-top:-27px;
+}
+
+/*#header-img {
     margin:5px 3px -3px 0px;
     padding:0px 5px
 }
@@ -49,7 +53,7 @@ a.author.id-t2_8gh9f:after {content:" a horse"}
 
 a.author.id-t2_aj4cg{content:"";font-size:0px!important;display:inline-block;vertical-align:bottom;overflow:hidden;letter-spacing:-20px}
 a.author.id-t2_aj4cg:after{font-size:10px!important;display:block;letter-spacing:normal}
-a.author.id-t2_aj4cg:after {content:" uo‾ouǝ"}
+a.author.id-t2_aj4cg:after {content:" ɐ ɥoɹsǝ"}
 
 a.author.id-t2_a26t0{content:"";font-size:0px!important;display:inline-block;vertical-align:bottom;overflow:hidden;letter-spacing:-20px}
 a.author.id-t2_a26t0:after{font-size:8px!important;display:block;letter-spacing:normal}
@@ -213,7 +217,7 @@ END-PONYSCRIPT-IGNORE {
 
 
 
-/*Making the tabs' corners more rounded (stole from r/mylittlepony)
+/*Making the tabs' corners more rounded (stolen from r/mylittlepony)*/
 .tabmenu li a {
     -webkit-border-top-left-radius: 5px;
     -webkit-border-top-right-radius: 5px;
@@ -221,7 +225,7 @@ END-PONYSCRIPT-IGNORE {
     -moz-border-radius-topleft: 5px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-}*/
+}
 
 /*Tab test
 .tabmenu li a {  
