--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -27,7 +27,7 @@
 div#header-bottom-left ul.tabmenu {
   position: absolute;
   bottom: 0px;
-  left: 140px;
+  left: 220px;
   font-family: "Lucida Sans Unicode", "Trebuchet MS", Verdana, serif;
   text-transform: uppercase;
   font-size: 12px;
@@ -131,7 +131,7 @@ div#header-bottom-left ul.tabmenu {
 .side h6 {
   position: absolute;
   top: 118px;
-  left: 140px;
+  left: 220px;
   font-size: 12px;
   padding: 14px 0px 14px 60px;
   font-weight: bold;
@@ -140,6 +140,8 @@ div#header-bottom-left ul.tabmenu {
 }
 
 .side h6 del { color: inherit }
+.side sup:nth-of-type(1) { margin: 10px 2em }
+.side .usertext-body ul a { font-weight: bold }
 
 .content {
   margin: 54px 5px 0 0;
