--- a/source-css/freepizzaspizzashop.css
+++ b/source-css/freepizzaspizzashop.css
@@ -42,6 +42,15 @@ a[href|="/ppshoulder"]{
     background-image: url(%%PPShoulder1%%) !important;
 }
 
+a[href|="/haveaday"]{
+    display:block;
+    clear:none;
+    float:left;
+    width:200px;
+    height:200px;
+    background-image: url(%%have-a-day%%) !important;
+}
+
 a[href|="/scootsscared"]{
     display:block;
     clear:none;
