--- a/source-css/maudpie.css
+++ b/source-css/maudpie.css
@@ -512,6 +512,12 @@ a[href|="/maudseriously"],a[href|="/yougottabekiddingme"],a[href|="/mpseriously"
 a[href|="/rmaudseriously"],a[href|="/ryougottabekiddingme"],a[href|="/rmpseriously"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%maud-sheet%%)!important; background-position: -200% -500%;}
 
+a[href|="/maudstare"],a[href|="/mpstare"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%maud-sheet%%)!important; background-position: -300% -400%;}
+
+a[href|="/rmaudstare"],a[href|="/rmpstare"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%maud-sheet%%)!important; background-position: -300% -500%;}
+
 a[href|="/maudheart"]
 {display:block;clear:none;float:left;width:131px;height:200px;background-image:url(%%maudpieheart%%)!important; background-position: 0 0;}
 
@@ -608,6 +614,9 @@ a[href|="/maudflip"]
 
 a[href|="/maudbellyrubs"],a[href|="/mpbellyrubs"]
 {display:block;clear:none;float:left;width:151px;height:150px;background-image:url(%%medium%%)!important; background-position: 0 -450px;}
+
+a[href|="/wmmaud"],a[href|="/wmmp"]
+{display:block;clear:none;float:left;width:120px;height:150px;background-image:url(%%medium%%)!important; background-position: -151px -450px;}
 
 a[href|="/princessmaud"],a[href|="/princessmp"],a[href|="/maudicorn"]
 {display:block;clear:none;float:left;width:242px;height:180px;background-image:url(%%princessmp%%)!important; background-position: 0 0;}
