--- a/source-css/zponymotes.css
+++ b/source-css/zponymotes.css
@@ -437,3 +437,18 @@ a[href|="/sonatastare"] {
     height: 70px;
     background-position: -630px -140px
     }
+
+a[href|="/cadencehuh"]
+
+ {
+    display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%pngsheet2%%) !important
+    }
+
+a[href|="/cadencehuh"] {
+    width: 140px;
+    height: 140px;
+    background-position: -0px -0px
+    }
