--- a/source-css/mlpvectors.css
+++ b/source-css/mlpvectors.css
@@ -3,8 +3,9 @@
 /* TODO: Add hover icon on the side of the screen for showing the emote table. */
 
 /* This line makes the header bar appear the correct height, even before Fluttershy is loaded */
-/* Remember to update this if you're changing the size of the header picture! */
-#header-bottom-left{height:104px;}
+/* Remember to update this if you're changing the size of the header picture! (Seems to be unneccessary) */
+/* #header-bottom-left{height:104px} */
+#header-img{position:relative;bottom:-3px}
 
 /* Remove RES tag and vote counts from moderator box */
 
@@ -24,28 +25,27 @@ a[href="/spoiler"]:hover {color: white !important;}
  position:static
 }
 .titlebox .usertext-body .md ol{
- width:auto;
- background-color:#EFF7FF;
- border:1px solid #5f99cf;
- border-right:0;
- position:absolute;
- top:32px;left:138px;
- z-index:50;
- margin:20px 420px 0 0;
- padding:0px 8px;
- padding-right:12px;
- padding-bottom:5px;
- padding-top:5px;
- list-style:none;
- display:block;
- white-space:normal;
- overflow:hidden;
- border-radius:10px;
- border-top-right-radius:0px;
- border-bottom-right-radius:0px;
- z-index:9999;overflow:visible;
- max-height:16px;
- white-space:nowrap
+width:auto;
+background-color:#EFF7FF;
+border:1px solid #5f99cf;
+border-right: 0;
+position: absolute;
+top: 32px;
+left: 138px;
+margin: 20px 0 0;
+padding: 0px 8px;
+padding-right: 0;
+padding-bottom: 5px;
+padding-top: 5px;
+list-style: none;
+display: block;
+border-radius: 10px;
+border-top-right-radius: 0px;
+border-bottom-right-radius: 0px;
+z-index: 9999;
+overflow: visible;
+max-height: 16px;
+white-space: nowrap;
 }
 
 .titlebox .usertext-body .md ol li{
@@ -73,7 +73,7 @@ a[href="/spoiler"]:hover {color: white !important;}
 
 /* Link flair */
 
-div:not(.linkflair)
+/* div:not(.linkflair) */
 
 /* Highlighting for flair selection button.  Currently disabled. */
 /*.thing a.flairselectbtn{background-color:#ffdd94;border-radius:4px;border:1px solid #eee;padding-left:2px;padding-right:2px}span.rank{color:#888!important}*/
@@ -84,21 +84,34 @@ background-repeat:no-repeat;
 position:relative;
 }
 
-.linkflair p.title .linkflairlabel{border:solid 1px #ccc;border-radius:0px;padding:0px;margin:0px;height:14px;overflow:visible;position:relative;top:-1px;left:-6px;padding-left:6px;padding-right:5px;margin-right:-2px;border-left:none;border-radius:2px;max-width:200px}
-
+.linkflair p.title .linkflairlabel, .flairselection .linkflairlabel{border:solid 1px #ccc;border-radius:0px;padding:0px;margin:0px;height:14px;overflow:visible;position:relative;top:-1px;left:-6px;padding-left:6px;padding-right:5px;margin-right:-2px;border-left:none;border-radius:2px;max-width:200px}
+.flairselection .linkflairlabel, .entry .linkflairlabel { display: none }
+.flairoptionpane .linkflair-simpcrit {
+    padding: 5px;
+    height: 32px;
+    box-sizing: border-box;
+    text-align: center;
+}
 .linkflair-simpcrit a.title::after {
     width:20px;
-    height:24px;
+    height:21px;
     position:relative;
-    top:4px;
     overflow:visible !important;
     margin-left:6px;
     margin-top:0px;
     z-index:1;
-    content:url(%%CRIT-C%%)
+    content: url(%%CRIT-C%%);
+    display: inline-block !important;
 }
+:not(.flairoptionpane) .linkflair-simpcrit a.title::after { vertical-align: middle }
+.entry .title .linkflairlabel {display:none}
 
-.flairoptionpane .linkflair a{display:none}
+.flairoptionpane .linkflair:not(.linkflair-simpcrit) a{display:none}
+.flairoptionpane .linkflair.linkflair-simpcrit a { font-size: 0 !important }
+.flairoptionpane .linkflair.linkflair-simpcrit .linkflairlabel {
+    margin: 3px 0 0 0;
+    vertical-align: top;
+}
 .flairselection:after{
 content:"Don't forget to click save!";
 font-size:10px!important;
@@ -134,17 +147,17 @@ display:inline-block;
 .flair-fireworks{ 
 background-position: 0 0; width: 20px; height: 20px; }
 .flair-illustrator{ 
-background-position: 0px - 70px; width: 20px; height: 20px; } 
+background-position: 0px -70px; width: 20px; height: 20px; } 
 .flair-inkscape{ 
-background-position: 0px - 140px; width: 20px; height: 20px; } 
+background-position: 0px -140px; width: 20px; height: 20px; } 
 .flair-photoshop{
- background-position: 0px - 210px; width: 20px; height: 20px; }
+ background-position: 0px -210px; width: 20px; height: 20px; }
 .flair-pscape{
 background: url(%%pscape2%%);
-background-position: 0 - 0px; width: 20px; height: 20px;}
+background-position: 0 -0px; width: 20px; height: 20px;}
 .flair-pscapetest{
 background: url(%%paintflair%%);
-background-position: 0 - 0px; width: 20px; height: 20px;}
+background-position: 0 -0px; width: 20px; height: 20px;}
 
 /* The forbidden Master flair */
 
@@ -157,7 +170,8 @@ background: url(%%trinity%%);
 
 .thumbnail.self,.thumbnail.nsfw,.thumbnail.default{background-image:url(%%EDXekdb9-N195lO5%%)!important}.thumbnail.self{background-position:0px -120px!important}.thumbnail.nsfw{background-position:0px 0px!important}.thumbnail.default{background-position:0px -70px!important}.thing[data-fullname$="d"] .thumbnail.nsfw,.thing[data-fullname$="i"] .thumbnail.nsfw,.thing[data-fullname$="s"] .thumbnail.nsfw,.thing[data-fullname$="c"] .thumbnail.nsfw,.thing[data-fullname$="e"] .thumbnail.nsfw,.thing[data-fullname$="n"] .thumbnail.nsfw,.thing[data-fullname$="t"] .thumbnail.nsfw,.thing[data-fullname$="a"] .thumbnail.nsfw{background-position:0px -170px!important}
 
-.marknsfw-button a[href="#"],.unmarknsfw-button a[href="#"]{font-size:0px!important;display:inline-block;vertical-align:bottom;overflow:hidden;letter-spacing:-20px}.unmarknsfw-button a[href="#"]:before,.marknsfw-button a[href="#"]:before{font-size:10px!important;visibility:visible!important;display:block;letter-spacing:normal}.marknsfw-button a[href="#"]:before{content:"spoiler"}.unmarknsfw-button a[href="#"]:before{content:"un-spoiler"}.nsfw-stamp acronym{border:#5F99CF 1px solid!important;display:inline-block;font-size:0px!important;letter-spacing:0px;overflow:hidden;vertical-align:bottom;margin-bottom:-1px}.nsfw-stamp acronym:after{color:#336699!important;content:"SPOILER"!important;display:inline;font-size:x-small!important;text-decoration:none;visibility:visible!important}
+.marknsfw-button a[href="#"],.unmarknsfw-button a[href="#"]{font-size:0px!important;display:inline-block;vertical-align:bottom;overflow:hidden;letter-spacing:-20px}.unmarknsfw-button a[href="#"]:before,.marknsfw-button a[href="#"]:before{font-size:10px!important;visibility:visible!important;display:inline-block;letter-spacing:normal;text-decoration: inherit}.marknsfw-button a[href="#"]:before{content:"spoiler"}.unmarknsfw-button a[href="#"]:before{content:"un-spoiler"}.nsfw-stamp acronym{border:#5F99CF 1px solid!important;display:inline-block;font-size:0px!important;letter-spacing:0px;overflow:hidden;vertical-align:bottom;margin-bottom:-1px}.nsfw-stamp acronym:after{color:#336699!important;content:"SPOILER"!important;display:inline;font-size:x-small!important;text-decoration:none;visibility:visible!important}
+.toggle .option.active{line-height:8px}
 
 /* Emotes */
 
@@ -325,3 +339,40 @@ clear: both;
 /* This makes 'code' text bigger in the sidebar. */
 
 .titlebox > form > div > div > pre > code { font-size: 125%}
+
+/* Fxing reddit's buggy tabs */
+.tabmenu li.selected a {
+    border-bottom: 0 !important;
+    padding-bottom: 1px;
+}
+/* Sidebar user count text change */
+.users-online .word { font-size: 0 !important }
+.users-online .word:after {
+    content: "ponies reading now";
+    font-size: 12px;
+}
+/* Header re-style [Pink] *[remove this to activate]/
+#header {
+background: #fbddf7;
+background: -moz-linear-gradient(top,  #fbddf7 0%, #fccaf5 100%);
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fbddf7), color-stop(100%,#fccaf5));
+background: -webkit-linear-gradient(top,  #fbddf7 0%,#fccaf5 100%);
+background: -o-linear-gradient(top,  #fbddf7 0%,#fccaf5 100%);
+background: -ms-linear-gradient(top,  #fbddf7 0%,#fccaf5 100%);
+background: linear-gradient(to bottom,  #fbddf7 0%,#fccaf5 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fbddf7', endColorstr='#fccaf5',GradientType=0 );
+}
+#header-bottom-right,
+.tabmenu li:not(.selected) a,
+.titlebox .usertext-body .md ol {
+    background-color: rgba(255,255,255,.7) !important;
+}
+.tabmenu li.selected a {
+    color: #E263CD;
+}
+.titlebox .usertext-body .md ol,
+.tabmenu li.selected a,
+#header {
+    border-color: #E263CD !important;
+}
+a { color: #AD3799 }
